# OpenDocvivid

./: .gitignore  README-CN.md  README.md
backend/: .env  main.py  pyproject.toml
backend/src/: app.py  celery_app.py
backend/src/clients/: llm.py  redis.py
backend/src/configs/: config.py
backend/src/libs/: postgresql_transactional.py
backend/src/models/: __init__.py  base.py  subscription_models.py  task_modes.py  user_models.py
backend/src/routes/: auth.py  credit.py  system.py  video.py  webhook.py
backend/src/schemas/: __init__.py  auth.py  credit.py  user.py
backend/src/services/: credit_service.py  subscription_service.py  user_service.py  video_service.py
backend/src/tasks/: credit_tasks.py  generate_tasks.py
backend/src/types/: auth.py
backend/src/utils/: dependencies.py  exceptions.py  file_loader.py  logger.py  middleware.py  security.py  storage.py  webpage.py
frontend/: .env.local  components.json  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  structured-data.tsx
frontend/app/(app)/: layout.tsx  page.tsx
frontend/app/(standalone)/: layout.tsx
frontend/components/: account-dialog.tsx  app-sidebar.tsx  doc-vivid-input.tsx  explore-content.tsx  nav-info.tsx  nav-logo.tsx  nav-main.tsx  nav-user.tsx  pricing-content.tsx  pricing2.tsx  providers.tsx
frontend/components/kokonutui/: profile-dropdown.tsx
frontend/components/ui/: switch.tsx
frontend/lib/: api-client.ts
frontend/lib/api/: credit.ts  index.ts  video-tasks.ts
frontend/public/: robots.txt  sitemap.xml
(+7 files in other folders)
